--- a/HashCodeQuali_2018/HashCodeQuali_2018/HashCodeQuali_2018.csproj
+++ b/HashCodeQuali_2018/HashCodeQuali_2018/HashCodeQuali_2018.csproj
@@ -42,9 +42,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Car.cs" />
     <Compile Include="FileManager.cs" />
+    <Compile Include="Order.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Simulation.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
